--- a/src/screens/common/LandingPage/LandingPage.css
+++ b/src/screens/common/LandingPage/LandingPage.css
@@ -1,6 +1,9 @@
 .row1 {
-  margin: 0 0 0 0;
-  border-radius: 10;
+  margin-top: 200px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  display: flex;
 }
 
 html {
@@ -8,15 +11,11 @@ html {
 }
 
 body {
-  background-color: #4158D0;
-background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
-
-  
+  min-height: 100vh;
 }
 
 .row2 {
   margin: 10px;
-  
 }
 
 .image {
@@ -25,16 +24,11 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 }
 
 .bg {
-  
   background-color: #4158D0;
 background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 
 }
-.lol{
-  background-color: #4158D0;
-background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 
-}
 @media only screen and (min-height: 100vh) {
   .buttonContainer {
     padding: 0 200px;
