--- a/src/screens/common/LoginPage/LoginPage.css
+++ b/src/screens/common/LoginPage/LoginPage.css
@@ -1,3 +1,4 @@
+
 .form {
   align-self: center;
   margin-top: 50px;
@@ -7,5 +8,13 @@
 }
 
 .formbg {
-  background-color: azure;
+  background: linear-gradient(to right, #65106e, #ed05ed);
+}
+
+body {
+  background-image: linear-gradient(to right, #65106e, #ed05ed);
+  height: 100vh;
+}
+.button1{
+  margin-bottom: 10;
 }
