--- a/src/screens/common/LandingPage/Landingpage3.css
+++ b/src/screens/common/LandingPage/Landingpage3.css
@@ -1,5 +1,5 @@
 .owl-carousel {
-  background: linear-gradient(to right, #65106e, #ed05ed);
+  background: linear-gradient(to right, #05c3e5, #0470a7);
   height: 100vh;
   display: flex;
   align-items: center;
@@ -67,5 +67,5 @@
 }
 
 .image img {
-  width: 100%;
+  width: 1000%;
 }
