--- a/src/screens/common/RegistrationPage/RegistrationPage.css
+++ b/src/screens/common/RegistrationPage/RegistrationPage.css
@@ -1,5 +1,5 @@
 .bg {
-    background: linear-gradient(to right, #65106e, #ed05ed);
+    background: linear-gradient(to right, #05c3e5, #0470a7);
     height: 100vh;
     display: flex;
     align-items: center;
